# cmake-init-conan

./: .CMakeUserPresets.json  .codespellrc  .gitlab-ci.yml  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  conanfile.py  requirements.txt
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake  spell-targets.cmake  variables.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: mytest_test.cpp
util/: bootstrap.py
